Expanded the width of the globe-buttons div. - Prevents wrapping of the marker's dropdown button. - Fixes issue #17.

--- a/root/css/override.css
+++ b/root/css/override.css
@@ -206,7 +206,7 @@ body {
     margin-top: 30px;
     margin-right: 5px;
     margin-left: 0px;
-    max-width: 80px;
+    max-width: 85px;
 }
 
 #timeControlButtons {
